--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>📱 Freelancer App</h1>
+        <h1>Freelancer</h1>
         <p>İletişim & Destek Formu</p>
       </div>
 
@@ -79,19 +79,7 @@
           </div>
         </form>
 
-        <div class="contact-info">
-          <h3>📞 İletişim Bilgileri</h3>
-          <div class="contact-item">
-            <strong>E-posta:</strong> support@freelancerapp.com
-          </div>
-          <div class="contact-item">
-            <strong>Yanıt Süresi:</strong> 6-48 saat
-          </div>
-          <div class="contact-item">
-            <strong>Destek:</strong> 7/24 otomatik yanıt
-          </div>
-        </div>
-      </div>
+
     </div>
 
     <script>
